--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    window.addEventListener('scroll', e => {
+      document.body.style.cssText = `--scrollTop:${this.scrollY}px`
+    })
+  </script>
 </head>
 <body>
   <app-root></app-root>
 </body>
+
 </html>
